--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # ----------------------------------------------------------------------------
 
 build/
-asset/
 debug/
 release/
 Debug/
@@ -96,12 +95,6 @@ Thumbs.db
 
 # Exclude the following files
 !/resources/icons/*.svg
-!/asset/Models/
-!/asset/SimulationData/dataDlc.xml
-!/asset/SimulationData/dataSineDwell.xml
-!/asset/Texture
-!/asset/World/world.xml
-!/asset/World/worldDlc.xml
-!/asset/World/worldVda.xml
+!/asset/**
 
 
